# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import patientsRouter from "./patients";
 import assessmentsRouter from "./assessments";
 import investigationsRouter from "./investigations";
 import carePathwayRouter from "./care-pathway";
+import surgicalTriageRouter from "./surgical-triage";
 import surgeriesRouter from "./surgeries";
 import managementPlansRouter from "./management-plans";
 import medicationsRouter from "./medications";
@@ -16,6 +17,7 @@ router.use(patientsRouter);
 router.use(assessmentsRouter);
 router.use(investigationsRouter);
 router.use(carePathwayRouter);
+router.use(surgicalTriageRouter);
 router.use(surgeriesRouter);
 router.use(managementPlansRouter);
 router.use(medicationsRouter);
